feat: add button trailer, rating bar and some refactor in details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,11 @@
     <!-- for menu -->
     <string name="most_popular">most popular</string>
     <string name="highest_rated">highest rated</string>
+    <string name="favorite">favorite</string>
+
+   <!-- font awesome-->
+    <string name="cheked.heart">#xf004</string>
+    <string name="uncheked.heart">#xf08a</string>
 
 
 
