feat: add heart and youtube button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,9 @@
     <string name="favorite">favorite</string>
 
    <!-- font awesome-->
-    <string name="cheked.heart">#xf004</string>
-    <string name="uncheked.heart">#xf08a</string>
+    <string name="cheked.heart">&#xf004;</string>
+    <string name="youtube.button">&#xf167;</string>
+
 
 
 
