--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,28 @@
 
 
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_movie_detail">Movie Detail</string>
+    <string name="pref_sortby_label_popularity">Popularity</string>
+    <string name="pref_sortby_label_hightestrated">Highest Rated</string>
+    <string name="pref_sortby_popularity">popularity.desc</string>
+    <string name="pref_sortby_hightestrated">vote_average.desc</string>
+    <string name="pref_sortby_label">SortBy</string>
+    <string name="pref_sortby_key">sortby</string>
+    <string name="title_activity_settings">Settings</string>
+
+
+    <string-array name="pref_sortby_options">
+        <item>@string/pref_sortby_label_popularity</item>
+        <item>@string/pref_sortby_label_hightestrated</item>
+    </string-array>
+
+    <string-array name="pref_sortby_values">
+        <item>@string/pref_sortby_popularity</item>
+        <item>@string/pref_sortby_hightestrated</item>
+    </string-array>
+    <string name="title_activity_favorite_movies">FavoriteMoviesActivity</string>
 
 
 </resources>
